Tests/Fail/Test058.ML
(* Structure tests. *)

structure S: sig exception x of int end = struct exception x end;
